Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35821

passive_stream.cc:702 expects failure - prepare->getItem()->getBySeqno() == engine->getVBucket(vb_)->getHighSeqno()

    XMLWordPrintable

Details

    Description

      NOTE: Cloned from MB-35812 to track passive_stream exception

      1. Initialize a 7 node cluster, 1 default bucket with replica=1, bucket RAM=100MB
      2. Loaded 1110000 docs such that bucket goes into 37% resident ratio
      3. Rebalance out 1 node.

      +----------------+----------+--------------+
      | Nodes          | Services | Status       |
      +----------------+----------+--------------+
      | 172.23.105.225 | [u'kv']  | Cluster node |
      | 172.23.105.226 | [u'kv']  | Cluster node |
      | 172.23.105.220 | [u'kv']  | Cluster node |
      | 172.23.105.223 | [u'kv']  | Cluster node |
      | 172.23.105.227 | [u'kv']  | Cluster node |
      | 172.23.105.221 | [u'kv']  | Cluster node |
      | 172.23.105.208 | [u'kv']  | --- OUT ---> |
      +----------------+----------+--------------+
      

      4. During rebalance load another 1120000 items. Total items in bucket = 2240000
      5. rebalance out 2 more nodes:

      +----------------+----------+--------------+
      | Nodes          | Services | Status       |
      +----------------+----------+--------------+
      | 172.23.105.225 | [u'kv']  | Cluster node |
      | 172.23.105.226 | [u'kv']  | --- OUT ---> |
      | 172.23.105.220 | [u'kv']  | Cluster node |
      | 172.23.105.223 | [u'kv']  | Cluster node |
      | 172.23.105.227 | [u'kv']  | --- OUT ---> |
      | 172.23.105.221 | [u'kv']  | Cluster node |
      +----------------+----------+--------------+
      

      6. While 5 is running. load another 1120000 docs.
      7. Rebalance failed. memcached exited with reason 134.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-35821
          # Subject Branch Project Status CR V

          Activity

            People

              jwalker Jim Walker
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty