MB-35821: Expect that prepare seqno == high seqno only when successful

The PassiveStream::processPrepare Expect only applies if the
processing was successful.

Change-Id: I4c1b438694979a62506991d7b9cddbf75670050d
Reviewed-on: http://review.couchbase.org/114312
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>